--- a/dc-commons-springboot/pom.xml
+++ b/dc-commons-springboot/pom.xml
@@ -8,10 +8,12 @@
     <version>4.2.1</version>
   </parent>
 
-  <name>DigitalCollections: Commons Spring Boot (Spring Boot 2)</name>
   <artifactId>dc-commons-springboot</artifactId>
   <version>4.1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
+
+  <name>DigitalCollections: Commons Spring Boot (Spring Boot 2)</name>
+  <url>https://github.com/dbmdz/digitalcollections-commons/tree/main/dc-commons-springboot</url>
 
   <properties>
     <version.junit>5.8.2</version.junit>
