--- a/dc-commons-jdbi/pom.xml
+++ b/dc-commons-jdbi/pom.xml
@@ -8,10 +8,12 @@
     <version>4.2.1</version>
   </parent>
 
-  <name>DigitalCollections: Commons JDBI</name>
   <artifactId>dc-commons-jdbi</artifactId>
   <version>5.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+
+  <name>DigitalCollections: Commons JDBI</name>
+  <url>https://github.com/dbmdz/digitalcollections-commons/tree/main/dc-commons-jdbi</url>
 
   <dependencies>
     <dependency>
