--- a/dc-commons-server/pom.xml
+++ b/dc-commons-server/pom.xml
@@ -8,10 +8,12 @@
     <version>4.2.1</version>
   </parent>
 
-  <name>DigitalCollections: Commons Server</name>
   <artifactId>dc-commons-server</artifactId>
   <version>4.1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
+
+  <name>DigitalCollections: Commons Server</name>
+  <url>https://github.com/dbmdz/digitalcollections-commons/tree/main/dc-commons-server</url>
 
   <dependencies>
     <dependency>
