--- a/dc-commons-validation/pom.xml
+++ b/dc-commons-validation/pom.xml
@@ -8,10 +8,12 @@
     <version>4.2.1</version>
   </parent>
 
-  <name>DigitalCollections: Commons Validation</name>
   <artifactId>dc-commons-validation</artifactId>
   <version>4.1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
+
+  <name>DigitalCollections: Commons Validation</name>
+  <url>https://github.com/dbmdz/digitalcollections-commons/tree/main/dc-commons-validation</url>
 
   <dependencies>
     <dependency>
