Add excludes to fix the build

--- a/dc-commons-file/pom.xml
+++ b/dc-commons-file/pom.xml
@@ -20,6 +20,20 @@
       <groupId>de.digitalcollections.model</groupId>
       <artifactId>dc-model</artifactId>
       <version>10.0.2</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-aop</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-beans</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-expression</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
