--- a/dc-commons-springmvc/pom.xml
+++ b/dc-commons-springmvc/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>dc-commons-springmvc</artifactId>
-  <version>6.0.0-SNAPSHOT</version>
+  <version>6.0.0</version>
   <packaging>jar</packaging>
 
   <name>DigitalCollections: Commons Spring MVC</name>
