--- a/dc-commons-springsecurity/pom.xml
+++ b/dc-commons-springsecurity/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>dc-commons-springsecurity</artifactId>
-  <version>4.1.3-SNAPSHOT</version>
+  <version>4.1.3</version>
   <packaging>jar</packaging>
 
   <name>DigitalCollections: Commons Spring Security (Spring Security 5)</name>
