--- a/dc-commons-springboot/pom.xml
+++ b/dc-commons-springboot/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>dc-commons-springboot</artifactId>
-  <version>4.1.3-SNAPSHOT</version>
+  <version>4.1.3</version>
   <packaging>jar</packaging>
 
   <name>DigitalCollections: Commons Spring Boot (Spring Boot 2)</name>
@@ -34,7 +34,7 @@
     <dependency>
       <groupId>de.digitalcollections.commons</groupId>
       <artifactId>dc-commons-springsecurity</artifactId>
-      <version>4.1.3-SNAPSHOT</version>
+      <version>4.1.3</version>
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
