--- a/dc-commons-file/pom.xml
+++ b/dc-commons-file/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>dc-commons-file</artifactId>
-  <version>6.0.1</version>
+  <version>6.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>DigitalCollections: Commons File</name>
