--- a/dc-commons-web/pom.xml
+++ b/dc-commons-web/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>dc-commons-web</artifactId>
-  <version>1.1.0</version>
+  <version>1.1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>DigitalCollections: Commons Web</name>
