--- a/dc-commons-springdata/pom.xml
+++ b/dc-commons-springdata/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>dc-commons-springdata</artifactId>
-  <version>6.0.0</version>
+  <version>7.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>DigitalCollections: Commons Spring Data</name>
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>de.digitalcollections.model</groupId>
       <artifactId>dc-model</artifactId>
-      <version>11.0.1</version>
+      <version>12.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.data</groupId>
