--- a/dc-commons-jdbi/pom.xml
+++ b/dc-commons-jdbi/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>dc-commons-jdbi</artifactId>
-  <version>7.0.2-SNAPSHOT</version>
+  <version>7.0.2</version>
   <packaging>jar</packaging>
 
   <name>DigitalCollections: Commons JDBI</name>
