--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,30 +2,95 @@ name: CI
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main, release/* ]
   push:
-    branches: [ main ]
+    branches: [ main, release/* ]
+  release:
+    types: [ published ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [11, 17]
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out repository
+        uses: actions/checkout@v4
       - name: Set up JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           check-latest: true
-          distribution: adopt
+          distribution: temurin
           java-version: ${{ matrix.java }}
-      - uses: actions/cache@v3
+      - name: Set up cache
+        uses: actions/cache@v4
         env:
           cache-name: cache-maven-artifacts
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          key: dc-commons-cache-java-${{ matrix.java }}-${{ github.run_id }}
+          path: |
+            ~/.m2/repository
+            **/target
+      - name: Check Java codestyle
+        run: mvn com.spotify.fmt:fmt-maven-plugin:check
       - name: Build with Maven
-        run: mvn -B verify
+        run: mvn -B -U clean verify
+    strategy:
+      matrix:
+        java: [11, 17]
+  publish:
+    if: (github.event_name == 'push' && (contains(github.ref, 'main') || startsWith(github.ref, 'release/'))) || github.event_name == 'release'
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+      - name: Set up cache
+        uses: actions/cache@v4
+        env:
+          cache-name: cache-maven-artifacts
+        with:
+          key: dc-commons-cache-java-17-${{ github.run_id }}
+          path: |
+            ~/.m2/repository
+            **/target
+      - name: Install XML utils
+        run: sudo apt update && sudo apt install libxml2-utils
+      - name: Extract project version
+        run: echo "PROJECT_VERSION=$(xmllint --xpath '/*[local-name()="project"]/*[local-name()="version"]/text()' pom.xml)" >> $GITHUB_ENV
+      # Publish snapshot
+      - name: Set up JDK 11 for publishing a snapshot
+        if: github.event_name == 'push' && endswith(env.PROJECT_VERSION, 'SNAPSHOT')
+        uses: actions/setup-java@v4
+        with:
+          check-latest: true
+          distribution: temurin
+          java-version: 11
+          server-id: central
+          server-password: MAVEN_PASSWORD
+          server-username: MAVEN_USERNAME
+      - name: Publish snapshot to the Maven Central Repository
+        if: github.event_name == 'push' && endswith(env.PROJECT_VERSION, 'SNAPSHOT')
+        run: mvn -B deploy -DskipTests
+        env:
+          MAVEN_PASSWORD: ${{ secrets.CENTRAL_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
+      # Publish release
+      - name: Set up JDK 11 for publishing a release
+        if: github.event_name == 'release' && !endswith(env.PROJECT_VERSION, 'SNAPSHOT')
+        uses: actions/setup-java@v4
+        with:
+          check-latest: true
+          distribution: temurin
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          java-version: 11
+          server-id: central
+          server-password: MAVEN_PASSWORD
+          server-username: MAVEN_USERNAME
+      - name: Publish release to the Maven Central Repository
+        if: github.event_name == 'release' && !endswith(env.PROJECT_VERSION, 'SNAPSHOT')
+        run: mvn -B deploy -DskipTests -Pdeploy
+        env:
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          MAVEN_PASSWORD: ${{ secrets.CENTRAL_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
