--- a/dc-commons-springboot/pom.xml
+++ b/dc-commons-springboot/pom.xml
@@ -3,13 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>de.digitalcollections.commons</groupId>
+    <groupId>dev.mdz.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.2.1</version>
+    <version>5.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>dc-commons-springboot</artifactId>
-  <version>4.1.3</version>
+  <version>5.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>DigitalCollections: Commons Spring Boot (Spring Boot 2)</name>
@@ -32,9 +32,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>de.digitalcollections.commons</groupId>
+      <groupId>dev.mdz.commons</groupId>
       <artifactId>dc-commons-springsecurity</artifactId>
-      <version>4.1.3</version>
+      <version>5.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
