--- a/dc-commons-springmvc/pom.xml
+++ b/dc-commons-springmvc/pom.xml
@@ -3,13 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>de.digitalcollections.commons</groupId>
+    <groupId>dev.mdz.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.2.1</version>
+    <version>5.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>dc-commons-springmvc</artifactId>
-  <version>7.0.5-SNAPSHOT</version>
+  <version>8.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>DigitalCollections: Commons Spring MVC</name>
@@ -17,9 +17,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>de.digitalcollections.model</groupId>
+      <groupId>dev.mdz.model</groupId>
       <artifactId>dc-model</artifactId>
-      <version>12.3.0</version>
     </dependency>
     <dependency>
       <groupId>info.solidsoft.mockito</groupId>
