--- a/dc-commons-springsecurity/pom.xml
+++ b/dc-commons-springsecurity/pom.xml
@@ -3,13 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>de.digitalcollections.commons</groupId>
+    <groupId>dev.mdz.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.2.1</version>
+    <version>5.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>dc-commons-springsecurity</artifactId>
-  <version>4.1.3</version>
+  <version>5.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>DigitalCollections: Commons Spring Security (Spring Security 5)</name>
