--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
         <configuration>
           <publishingServerId>central</publishingServerId>
           <autoPublish>true</autoPublish>
-          <deploymentName>${project.groupId}:${project.artifactId}:${project.version}</deploymentName>
+          <deploymentName>${project.groupId}:digitalcollections-commons:${project.version}</deploymentName>
         </configuration>
       </plugin>
     </plugins>
