--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ main ]
   push:
-    branches: [ main, release/* ]
+    branches: [ main ]
   release:
     types: [ published ]
   workflow_dispatch:
