--- a/dc-commons-springboot/pom.xml
+++ b/dc-commons-springboot/pom.xml
@@ -5,11 +5,10 @@
   <parent>
     <groupId>dev.mdz.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>5.0.0-SNAPSHOT</version>
+    <version>10.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>dc-commons-springboot</artifactId>
-  <version>5.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>DigitalCollections: Commons Spring Boot (Spring Boot 2)</name>
@@ -34,7 +33,7 @@
     <dependency>
       <groupId>dev.mdz.commons</groupId>
       <artifactId>dc-commons-springsecurity</artifactId>
-      <version>5.0.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
