--- a/dc-commons-file/pom.xml
+++ b/dc-commons-file/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>dev.mdz.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>10.0.0-SNAPSHOT</version>
+    <version>10.0.0</version>
   </parent>
 
   <artifactId>dc-commons-file</artifactId>
