--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>dev.mdz.commons</groupId>
   <artifactId>dc-commons</artifactId>
-  <version>10.0.0-SNAPSHOT</version>
+  <version>10.0.0</version>
   <packaging>pom</packaging>
 
   <modules>
